logs/pyserver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserialize'...
Listing './lib/python3.5/site-packages/pyserialize-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pyserver'...
Listing './lib/python3.5/site-packages/pyserver/network'...
Compiling './lib/python3.5/site-packages/pyserver/network/asyncController.py'...
***   File "./lib/python3.5/site-packages/pyserver/network/asyncController.py", line 67
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyserver/network/asyncMulticast.py'...
***   File "./lib/python3.5/site-packages/pyserver/network/asyncMulticast.py", line 122
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyserver/network/asyncTcpClient.py'...
***   File "./lib/python3.5/site-packages/pyserver/network/asyncTcpClient.py", line 128
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyserver/network/asyncTcpServer.py'...
***   File "./lib/python3.5/site-packages/pyserver/network/asyncTcpServer.py", line 112
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyserver/network/asyncUdp.py'...
***   File "./lib/python3.5/site-packages/pyserver/network/asyncUdp.py", line 80
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyserver/util'...
Compiling './lib/python3.5/site-packages/pyserver/util/orEvent.py'...
***   File "./lib/python3.5/site-packages/pyserver/util/orEvent.py", line 51
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyserver/util/sigTerminate.py'...
***   File "./lib/python3.5/site-packages/pyserver/util/sigTerminate.py", line 51
    print 'Ctrl+C detected!'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyserver/util/subProcController.py'...
***   File "./lib/python3.5/site-packages/pyserver/util/subProcController.py", line 60
    print key, ' terminating...'
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyserver-1.8.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
